Added most crops; still need textures

--- a/main/resources/assets/gaiasbounty/lang/en_US.lang
+++ b/main/resources/assets/gaiasbounty/lang/en_US.lang
@@ -105,12 +105,43 @@ tile.gaiasbounty.planks2.maple.name=Maple Wood Planks
 
 tile.gaiasbounty.trellis.name=Trellis
 
-tile.gaiasbounty.crop_grapes_green.name=Green Grape Plant
 tile.gaiasbounty.crop_grapes_red.name=Red Grape Plant
+tile.gaiasbounty.crop_grapes_green.name=Green Grape Plant
+tile.gaiasbounty.crop_kiwi.name=Kiwifruit Plant
 tile.gaiasbounty.crop_strawberry.name=Strawberry Plant
+tile.gaiasbounty.crop_raspberry.name=Raspberry Plant
+tile.gaiasbounty.crop_blackberry.name=Blackberry Plant
+tile.gaiasbounty.crop_blueberry.name=Blueberry Plant
+tile.gaiasbounty.crop_saskatoon.name=Saskatoon Berry Plant
+tile.gaiasbounty.crop_cranberry.name=Cranberry Plant
+tile.gaiasbounty.crop_pineapple.name=Pineapple Plant
 tile.gaiasbounty.crop_tomato.name=Tomato Plant
 tile.gaiasbounty.crop_rice.name=Rice Plant
+tile.gaiasbounty.crop_beet.name=Beet Plant
+tile.gaiasbounty.crop_turnip.name=Turnip Plant
+tile.gaiasbounty.crop_peanut.name=Peanut Plant
+tile.gaiasbounty.crop_pea.name=Pea Plant
+tile.gaiasbounty.crop_cucumber.name=Cucumber Plant
+tile.gaiasbounty.crop_zucchini.name=Zucchini Plant
+tile.gaiasbounty.crop_beans.name=Bean Plant
 tile.gaiasbounty.crop_corn.name=Corn Plant
+tile.gaiasbounty.crop_lettuce.name=Lettuce Plant
+tile.gaiasbounty.crop_celery.name=Celery Plant
+tile.gaiasbounty.crop_cabbage.name=Cabbage Plant
+tile.gaiasbounty.crop_leek.name=Leek Plant
+tile.gaiasbounty.crop_rhubarb.name=Rhubarb Plant
+tile.gaiasbounty.crop_broccoli.name=Broccoli Plant
+tile.gaiasbounty.crop_cauliflower.name=Cauliflower Plant
+tile.gaiasbounty.crop_onion.name=Onion Plant
+tile.gaiasbounty.crop_bell_pepper_red.name=Red Bell Pepper Plant
+tile.gaiasbounty.crop_bell_pepper_green.name=Green Bell Pepper Plant
+tile.gaiasbounty.crop_chili.name=Chili Pepper Plant
+tile.gaiasbounty.crop_agave.name=Agave Plant
+tile.gaiasbounty.crop_hops.name=Hops Plant
+tile.gaiasbounty.crop_mint.name=Mint Plant
+tile.gaiasbounty.crop_vanilla.name=Vanilla Plant
+tile.gaiasbounty.crop_garlic.name=Garlic Plant
+tile.gaiasbounty.crop_cotton.name=Cotton Plant
 tile.gaiasbounty.crop_flax.name=Flax Plant
 tile.gaiasbounty.crop_ginger.name=Ginger Plant
 
@@ -254,12 +285,43 @@ item.gaiasbounty.spigot.name=Spigot
 item.gaiasbounty.knife.name=Knife
 item.gaiasbounty.hand_churn.name=Hand Churn
 
-item.gaiasbounty.seeds_grapes_green.name=Green Grape Seeds
 item.gaiasbounty.seeds_grapes_red.name=Red Grape Seeds
+item.gaiasbounty.seeds_grapes_green.name=Green Grape Seeds
+item.gaiasbounty.seeds_kiwi.name=Kiwi Seeds
 item.gaiasbounty.seeds_strawberry.name=Strawberry Seeds
+item.gaiasbounty.seeds_raspberry.name=Raspberry Seeds
+item.gaiasbounty.seeds_blackberry.name=Blackberry Seeds
+item.gaiasbounty.seeds_blueberry.name=Blueberry Seeds
+item.gaiasbounty.seeds_saskatoon.name=Saskatoon Berry Seeds
+item.gaiasbounty.seeds_cranberry.name=Cranberry Seeds
+item.gaiasbounty.seeds_pineapple.name=Pineapple Seeds
 item.gaiasbounty.seeds_tomato.name=Tomato Seeds
 item.gaiasbounty.seeds_rice.name=Rice Seeds
+item.gaiasbounty.seeds_beet.name=Beet Seeds
+item.gaiasbounty.seeds_turnip.name=Turnip Seeds
+item.gaiasbounty.seeds_peanut.name=Peanut Seeds
+item.gaiasbounty.seeds_pea.name=Pea Seeds
+item.gaiasbounty.seeds_cucumber.name=Cucumber Seeds
+item.gaiasbounty.seeds_zucchini.name=Zucchini Seeds
+item.gaiasbounty.seeds_beans.name=Bean Seeds
 item.gaiasbounty.seeds_corn.name=Corn Seeds
+item.gaiasbounty.seeds_lettuce.name=Lettuce Seeds
+item.gaiasbounty.seeds_celery.name=Celery Seeds
+item.gaiasbounty.seeds_cabbage.name=Cabbage Seeds
+item.gaiasbounty.seeds_leek.name=Leek Seeds
+item.gaiasbounty.seeds_rhubarb.name=Rhubarb Seeds
+item.gaiasbounty.seeds_broccoli.name=Broccoli Seeds
+item.gaiasbounty.seeds_cauliflower.name=Cauliflower Seeds
+item.gaiasbounty.seeds_onion.name=Onion Seeds
+item.gaiasbounty.seeds_bell_pepper_red.name=Red Bell Pepper Seeds
+item.gaiasbounty.seeds_bell_pepper_green.name=Green Bell Pepper Seeds
+item.gaiasbounty.seeds_chili.name=Chili Pepper Seeds
+item.gaiasbounty.seeds_agave.name=Agave Seeds
+item.gaiasbounty.seeds_hops.name=Hops Seeds
+item.gaiasbounty.seeds_mint.name=Mint Seeds
+item.gaiasbounty.seeds_vanilla.name=Vanilla Seeds
+item.gaiasbounty.seeds_garlic.name=Garlic Seeds
+item.gaiasbounty.seeds_cotton.name=Cotton Seeds
 item.gaiasbounty.seeds_flax.name=Flax Seeds
 item.gaiasbounty.seeds_ginger.name=Ginger Seeds
 
